# instagram

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  File Structure.ini  LICENSE  README.md  README_halal.md  a.py  commands.md  commands.txt  docker-compose.yml  notes.md  openapi.json  plan  pyproject.toml  rough.md  todo.md  todo.txt  yet.ini
.github/: dependabot.yml
auth-server/: .env  .env.example  .env.test  .gitignore  Dockerfile  README.md  __init__.py  main.py  pyproject.toml
auth-server/.hypothesis/tmp/: tmpe_2at4bn
auth-server/app/: __init__.py  am.py  cookie_test.py  main.py
auth-server/app/api/: __init__.py  router.py
auth-server/app/api/api_v1/: router.py
auth-server/app/api/api_v1/endpoints/: __init__.py
auth-server/app/api/api_v1/endpoints/auth/: router.py
auth-server/app/api/api_v1/endpoints/email/: router.py
auth-server/app/api/api_v1/endpoints/users/: router.py
auth-server/app/api/dependencies/: db_deps.py
auth-server/app/core/: config.py  csrf.py  lifespan.py  logging_config.py  security.py
auth-server/app/db/: base.py  db.py
auth-server/app/db/repositories/: __init__.py  refresh_token.py  refresh_token_repo.py  user.py  user_repo.py
auth-server/app/models/: __init__.py  auth.py  refresh_token.py
auth-server/app/repositories/: __init__.py  interfaces.py  refresh_token.py  user.py
auth-server/app/schemas/: __init__.py  auth.py  responses.py  user.py
auth-server/app/services/: __init__.py  auth.py  to_doc.py  user_create.py
auth-server/app/services/auth/: __init__.py  user_create.py  user_login.py  user_logout.py  user_refresh_token.py
auth-server/app/services/email/: __init__.py  send.py  templates.py  verification.py
auth-server/app/services/user/: get_user.py
auth-server/app/static/: editProfile.html  ig mail.html  index.html  login.html  profile.html  register.html  reqHandler.js  styles.css  tos.html
auth-server/app/utils/: __init__.py  loggers.py
auth-server/tests/: .env.test  conftest.py
auth-server/tests/integration/: conftest.py  mongo_client.py  router_test.py  sample login.PowerShell
auth-server/tests/unit/: conftest.py  test_main.py
auth-server/tests/unit/api/: test_auth_endpoints.py  test_email_endpoints.py
auth-server/tests/unit/core/: test_csrf.py  test_security.py
auth-server/tests/unit/db/: conftest.py  test_db.py  test_user_repo.py
auth-server/tests/unit/repositories/: test_refresh_token.py  test_user.py
auth-server/tests/unit/schemas/: test_auth.py
auth-server/tests/unit/utils/: test_loggers.py
backend/: .env  .env.example  API_test.rest  context.txt  get_files.py  main.py  notes.md  pip_freeze.txt  pip_requirements.txt  pips.txt
backend/app/: config.py  main.py  middleware.py  redis_client.py
backend/app/api/: router.py  status_codes.txt
backend/app/auth/: routes.py  utils.py
backend/app/core/: config.py  db.py  logging_config.py  security.py
backend/app/db/: collections.py  db.py
backend/app/middleware/: auth.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/app/static/: login.html  me.html
backend/app/utils/: app_logger.py  loggers.py  security_logger.py
backend/auth/: a.html  routes.py  utils.py
backend/auth-server/: .env
backend/auth-server/app/: __init__.py  main.py
backend/auth-server/static/: instagram-sidebar.js
backend/auth-server/tests/: .env  .env.test  conftest.py  main_test.py  mongo_client.py
backend/auth-service/app/: main.py
backend/auth-service/logs/: __init__.py
backend/frontend_test/: login.html
backend/gate/: gate.py
backend/gate/gate testing/: a.rest  auth.py  gate.py  resource.py
backend/gate/static/: 404.html  index.html  login.html
backend/resource-server/: .env  .env.example
backend/resource-server/app/: main.py
backend/resource-service/static/: index.html  login.html
backend/resource-service/test/: auth.py  encodings.py
backend/static/: host.py  index.html  instagram-sidebar.js  login.html  me.html
backend/test/: __init__.py  a.py  encodings.py  fastapi_csrf.py  locust_test.py  ytmain.py
devdocs/: File Structure.ini  LLM guidelines.md  NextVersionFeatures.md  README_halal.md  README_old.md  architecture.md  auth.env.enc  authorized_access.md  build_principles.md  build_principles2.md  commands.md  db_planning.md  docker planning.md  nginx config.md  notes.md  pips.md  pips.txt  requirements.txt  rough.md  status_codes.txt  todo.md  wsl setup.md
frontend/: .env  Dockerfile  docs.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts  validators.ts
frontend/src/types/: api.ts
resource-server/: .env
resource-server/app/: main.py
resource-server/app/core/: __init__.py  config.py  csrf.py  lifespan.py  logging_config.py  security.py
resource-server/app/db/: __init__.py  db.py
resource-server/app/models/: __init__.py  comment.py  user.py
resource-server/app/repositories/: comment_like_repo.py  post_repo.py  (+4 more)
utils/: __init__.py  caddy.json  cerberus.py  cookie_test.py  csrf_sample.py  email.py  encodings.py  locust_test.py  stream.py
utils/nginx-gateway/: gate.py  pyproject.toml
(+101 files in other folders)
