[project]
name = "instagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==3.2.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "brotli==1.1.0",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.1.8",
    "colorama==0.4.6",
    "configargparse==1.7.1",
    "cryptography==44.0.2",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "ecdsa==0.19.1",
    "fastapi==0.115.12",
    "fastapi-csrf-protect==1.0.3",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-login==0.6.3",
    "gevent==25.5.1",
    "geventhttpclient==2.3.3",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "limits==5.5.0",
    "locust==2.37.10",
    "locust-cloud==1.23.1",
    "markupsafe==3.0.2",
    "motor==3.7.0",
    "msgpack==1.1.0",
    "packaging==25.0",
    "passlib==1.7.4",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "psutil==7.0.0",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pygments==2.19.2",
    "pymongo==4.12.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "python-dotenv==1.1.0",
    "python-engineio==4.12.2",
    "python-jose==3.4.0",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "python-socketio==5.13.0",
    "pywin32==310",
    "pyyaml==6.0.2",
    "pyzmq==26.4.0",
    "requests==2.32.4",
    "rsa==4.9.1",
    "setuptools==80.9.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchfiles==1.0.5",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]
