[project]
name = "auth-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==5.0.0",
    "fastapi>=0.116.1",
    "fastapi-csrf-protect>=1.0.7",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]==1.7.4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=3.3.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.35.0",
]
