[project.license]
license = "MIT"
license-files = ["LICENSE"]

keywords = ["auth", "server", "fastapi", "JWT", "API", "OAuth"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[project]
name = "auth-server"
version = "0.2.1"
description = "The auth server for Nmaa"
authors = [
    {name = "Sufiyan Attar", email = "sufiyanhattar@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt==3.2.0",
    "fastapi>=0.119.0",
    "fastapi-csrf-protect>=1.0.7",
    "fastapi-limiter>=0.1.6",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic[email]>=2.11.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-dotenv>=0.5.2",
    "pytest-mock>=3.15.0",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=3.3.0",
    "redis>=7.0.0",
    "schemathesis>=4.4.4",
    "uvicorn[standard]>=0.35.0",
]
